--- a/recipe.html
+++ b/recipe.html
@@ -1,81 +1,90 @@
 <!DOCTYPE html>
 <HTML>
-    <HEAD>
-        <TITLE>recipe page </TITLE>
-        <link rel="stylesheet" href="recipe_style.css">
-    </HEAD>
-    <body>
-        <div class="container">
-        <img src="./image-omelette.jpeg" alt="" class="omlette">
-        <h1><div class="text">Simple Omlette recipe</h1>
-        <h5>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.</h5>
-  <div class="bar1">
-    <h4>Preparation Time</h4>
-<ul>
-    <li><strong>Total</strong>: Approximately 10 minutes</li>
-  <li><strong>Preparation</strong>: 5 minutes</li>
-  <li><strong>Cooking</strong>: 5 minutes</li>
-  </ul>
-  </div>
-  
+
+<HEAD>
+  <TITLE>recipe page </TITLE>
+  <link rel="stylesheet" href="recipe_style.css">
+</HEAD>
+
+<body>
+  <div class="container">
+    <img src="./images/image-omelette.jpeg" alt="" class="omlette">
+    <h1>
+      <div class="text">Simple Omlette recipe
+    </h1>
+    <h5>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+      to perfection, optionally filled with your choice of cheese, vegetables, or meats.</h5>
+    <div class="bar1">
+      <h4>Preparation Time</h4>
+      <ul>
+        <li><strong>Total</strong>: Approximately 10 minutes</li>
+        <li><strong>Preparation</strong>: 5 minutes</li>
+        <li><strong>Cooking</strong>: 5 minutes</li>
+      </ul>
+    </div>
+
     <h2>Ingredients</h2>
     <ul>
-    <li>2-3 large eggs</li> 
-  <li>Salt, to taste</li>
-  <li>Pepper, to taste</li>
-  <li>1 tablespoon of butter or oil</li>
-  <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-</ul>
-<h2>Instrunctions</h2>
-<ol>
-    <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.</li>
+      <li>2-3 large eggs</li>
+      <li>Salt, to taste</li>
+      <li>Pepper, to taste</li>
+      <li>1 tablespoon of butter or oil</li>
+      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+    </ul>
+    <h2>Instrunctions</h2>
+    <ol>
+      <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
+        mixed.
+        You can add a tablespoon of water or milk for a fluffier texture.</li>
 
-  <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+      <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
 
-  <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.</li>
+      <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to
+        ensure
+        the eggs evenly coat the surface.</li>
 
- <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.</li> 
+      <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny
+        in the
+        middle, sprinkle your chosen fillings over one half of the omelette.</li>
 
-  <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-</li>
-  <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
-</ol>
-<h2>Nutrition</h2>
-<p>The table below shows nutritional values per serving without the additional fillings.
-</p>
-<div class="bar2">
-<div class="inlineText">
-  <p>Calorie</p>
-  <p>277kcal</p>
-  
-</div>
-<hr>
-<div class="inlineText">
-  <p>calorie</p>
-  <p>calorie</p>
-  
-</div>
-<hr>
-<div class="inlineText">
-  <p>calorie</p>
-  <p>calorie</p>
-  
-</div>
-<hr>
-<div class="inlineText">
-  <p>calorie</p>
-  <p>calorie</p>
-  
-</div>
-<hr>
-</div> 
-    
-</div>
-</div>
+      <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over
+        the
+        fillings. Let it cook for another minute, then slide it onto a plate.
+      </li>
+      <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+    </ol>
+    <h2>Nutrition</h2>
+    <p>The table below shows nutritional values per serving without the additional fillings.
+    </p>
+    <div class="bar2">
+      <div class="inlineText">
+        <p>Calorie</p>
+        <p>277kcal</p>
+
+      </div>
+      <hr>
+      <div class="inlineText">
+        <p>calorie</p>
+        <p>calorie</p>
+
+      </div>
+      <hr>
+      <div class="inlineText">
+        <p>calorie</p>
+        <p>calorie</p>
+
+      </div>
+      <hr>
+      <div class="inlineText">
+        <p>calorie</p>
+        <p>calorie</p>
+
+      </div>
+      <hr>
+    </div>
+
+  </div>
+  </div>
 </body>
-</HTML> 
+
+</HTML>
