--- a/new.html
+++ b/new.html
@@ -9,7 +9,7 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <h1><a href="#">W.</a></h1>
+            <h1><a href="#">WW.</a></h1>
         </div>
         <div class="navbar">
             <a href="#">Home</a>
