--- a/new.html
+++ b/new.html
@@ -9,11 +9,11 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <h1><a href="#">WW.</a></h1>
+            <h1><a href="#">W.</a></h1>
         </div>
         <div class="navbar">
             <a href="#">Home</a>
-            <a href="#">New</a>
+            <a href="#">New1</a>
             <a href="#">Popular</a>
             <a href="#">Trending</a>
             <a href="#">catagories</a>
